# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\AppointmentController;
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\ObstetricSheetController;
 use App\Http\Controllers\Api\PatientAdmissionController;
+use App\Http\Controllers\Api\PregnancyRecordController;
 use App\Http\Controllers\Api\ScoringChartController;
 use App\Http\Controllers\Auth\VerifyEmailController;
 use Illuminate\Foundation\Auth\EmailVerificationRequest;
@@ -57,3 +58,5 @@ Route::prefix('appointments')->group(function () {
 Route::apiResource('scoring-charts', ScoringChartController::class);
 
 Route::apiResource('obstetric-sheets', ObstetricSheetController::class);
+
+Route::apiResource('pregnancy-records', PregnancyRecordController::class);
